feat: implement core pet care system with booking, appointment, and user management modules